<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DhakaTraveller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="menu">Menu</string>
    <string name="disrtict">District</string>
    <string name="specialmenu">Special Menu</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latittude</string>
    <string name="opening">Opening Time</string>
    <string name="closreday">Close Day</string>
    <string name="addrestaurant">Add Restaurant</string>
    <string name="vewmap"> View Mpa </string>

</resources>